# learn-haskell

./: README.md
HPFFP/: README.md
HPFFP/ch01-lambda/: Notes.md
HPFFP/ch02-hello/: FunctionWithLet.hs  Notes.md  test.hs
HPFFP/ch03-strings/: print1.hs  print3.hs  print3broken.hs  print3flipped.hs
HPFFP/ch04-datatypes/: exercises.hs  greetIfCool1.hs  greetIfCool2.hs  notes.md
HPFFP/ch05-types/: Arith3Fixed.hs  examples.hs  notes.md  typeinference1.hs  typekwondo.hs
HPFFP/ch06-typeclass/: notes.md  typeclass.hs
HPFFP/ch07-functions/: guard.hs  hof.hs  matchingtuple.hs  notes.md  registereduser.hs
HPFFP/ch08-recursion/: factorial.hs  fibo.hs  integral_div.hs  notes.md  recursive_increment.hs
HPFFP/ch09-list/: exercise.hs  notes.md
HPFFP/ch10-fold/: FoldAssociate.hs  notes.md
HPFFP/ch11-adt/: adt.hs  binarytree.hs  consdecons.hs  normalform.hs  notes.md
HPFFP/ch12-signaling-adversity/: liftPerson.hs  notes.md
HPFFP/ch13-build-projects/: notes.md
HPFFP/ch13-build-projects/hangman/: CHANGELOG.md  hangmanrm.cabal
HPFFP/ch13-build-projects/hangman/app/: Main.hs
HPFFP/ch13-build-projects/hello-haskell/call-em-up/: CHANGELOG.md  call-em-up.cabal
HPFFP/ch13-build-projects/hello-haskell/call-em-up/app/: Main.hs
HPFFP/ch14-testing/: notes.md
HPFFP/ch14-testing/morse/: morse.cabal
HPFFP/ch14-testing/morse/app/: Main.hs  Morse.hs
HPFFP/ch14-testing/morse/tests/: tests.hs
HPFFP/ch15-monoid-semigroup/: BoolMonoid.hs  Test.hs  madlib.hs  notes.md  reuse-algebra.hs  test.cabal
HPFFP/ch16-functor/: FunctorCheck.hs  FunctorInstanceExercise.hs  GoodBadUgly.hs  HigherKindFunctor.hs  IgnorePossibility.hs  NatTransform.hs  Replace.hs  Wrap.hs  functor.hs  functorcheck.cabal  notes.md
HPFFP/ch17-applicative/: CowApplicative.hs  MaybeApplicative.hs  Validation.hs  listapplicative.hs  notes.md
HPFFP/ch18-monad/: Kleisli.hs  MonadEither.hs  MonadList.hs  MonadMaybe.hs  MonadSumExercise.hs  do.hs  notes.md
HPFFP/ch19-applying-structure/: LiftedOr.hs  notes.md
HPFFP/ch19-applying-structure/scotty/: ScottyTest.hs  scottytest.cabal
HPFFP/ch19-applying-structure/url-shortener/: CHANGELOG.md  README.md  url-shortener.cabal
HPFFP/ch19-applying-structure/url-shortener/app/: Main.hs
HPFFP/ch20-foldable/: FoldableInstances.hs  notes.md
HPFFP/ch21-traversable/: notes.md
HPFFP/ch22-reader/: ApplicativeFunction.hs  exercise1.hs  new-beginning.hs  notes.md
HPFFP/ch23-state/: Moi.hs  RandomExample.hs  RandomExample2.hs  fizzbuzz.hs  fizzbuzz2.hs  notes.md
HPFFP/ch24-parser-combinators/: notes.md
HPFFP/ch24-parser-combinators/altparsing/: AltParsing.hs  altparsing.cabal
HPFFP/ch24-parser-combinators/parserfrac/: ParserFrac.hs  parserfrac.cabal
HPFFP/ch24-parser-combinators/polyparser/: PolyParser.hs  polyparser.cabal
HPFFP/ch25-composing-types/: code.hs  notes.md
HPFFP/ch26-monad-transformers/: EitherT.hs  MaybeT.hs  OuterInner.hs  README.md  ReaderT.hs  StateT.hs
LYAH/chapter-11/: functor.hs  monoid.hs  wrapped.hs
LYAH/chapter-12/: monad.hs
LYAH/chapter-13/: make-monad.hs  other-monad.hs  writer-monad.hs
LYAH/chapter-14/: fs.hs  zipper.hs
LYAH/chapter-4/: syntax_in_fn.hs
LYAH/chapter-7/: Geometry-in-one.hs  modules.hs
LYAH/chapter-8/: type.hs
PIH/: README.md
PIH/ch1/: Ch1.hs
PIH/ch10/: Ch10.hs  GameOfLife.hs  Hangman.hs  Nim.hs
PIH/ch11/: TicTacToe.hs
PIH/ch12/: Applicative.hs  Functors.hs  Monads.hs
PIH/ch13/: Calculator.hs  Parser.hs
PIH/ch14/: Foldable14.hs  Monoid14.hs  Traversable14.hs
PIH/ch15/: Lazy.hs
PIH/ch16/: Reasoning.hs
PIH/ch17/: Compiler.hs
PIH/ch5/: Ch5.hs
PIH/ch6/: Ch6.hs
PIH/ch7/: Ch7.hs
PIH/ch8/: Ch8.hs
PIH/ch9/: Ch9.hs
RWH/: README.md
RWH/BloomFilter/: Easy.hs  Hash.hs  Internal.hs  Mutable.hs
RWH/chapter-1/: simple.hs
RWH/chapter-10/: PNM.hs  Parse.hs  TreeMap.hs
RWH/chapter-11/: Arbitrary.hs  Prettify.hs  Prettify.hs.html  QC-basics.hs  QC.hs  Run.hs  hpc_index_exp.html
RWH/chapter-12/: Barcode.hs  NOTE.txt  Parse.hs
RWH/chapter-13/: DList.hs  buildmap.hs  funcrecs.hs  funcrecs2.hs  lookup.hs  num.hs  numsimple.hs  passwd  passwd-al.hs  passwdmap.hs
RWH/chapter-14/: Carrier.hs  Logger.hs  cartesian.hs  multiply.hs  random.hs  simplestate.hs  state.hs
RWH/chapter-15/: HandleIO.hs  MovieReview.hs  RandomSupply.hs  Supply.hs  SupplyClass.hs  SupplyInstance.hs  randomgolf.hs  vcard.hs
RWH/chapter-16/: HttpRequestParser.hs  csv1.hs  csv2.hs  csv6.hs  formapp.hs  formparse.hs
RWH/chapter-17/: Enum1.hs  PCRE-compile.hs  Regex.hs  Regex.hsc  RegexExec.hs  SimpleFFI.hs
RWH/chapter-18/: CountEntries.hs  CountEntriesT.hs  MTComposition.hs  MaybeT.hs  MaybeTParse.hs  UglyStack.hs  localReader.hs
RWH/chapter-19/: ParseInt.hs  divby1.hs  divby2.hs  divby3.hs  divby4.hs  divby5.hs  divby6.hs  divby7.hs  divby8.hs  dynexc.hs  hj1.hs  hj2.hs  safetail.hs  toupper.hs
RWH/chapter-2/: fn.hs
RWH/chapter-20/: RunProcess.hs  RunProcessSimple.hs  posixtime.hs
RWH/chapter-21/: query.hs  test1.db
RWH/chapter-22/: PodDB.hs  PodMain.hs  PodParser.hs  poddbtest.db
RWH/chapter-23/: NOTE.MD  PodCabalMain.hs  PodDownload.hs  PodLocalMain.hs  PodMainGUI.hs  PodTypes.hs  pod.cabal  podresources.glade
RWH/chapter-24/: Chan.hs  CommonURL.hs  Compressor.hs  LineChunks.hs  LineCount.hs  LockHierarchy.hs  MVarExample.hs  MapReduce.hs  NiceFork.hs  NumCapabilities.hs  ParMap.hs  SortMain.hs  Sorting.hs  abcd
RWH/chapter-25/: A.hs  A1.ps  A2.ps  A3.ps  B.hs  B.ps  C.hs  D.hs  E.hs  F.hs  G.hs  H.hs  I.hs
RWH/chapter-26/: BloomFilter.hs
RWH/chapter-27/: SyslogTypes.hs  syslogclient.hs  syslogserver.hs  syslogtcpclient.hs  syslogtcpserver.hs
RWH/chapter-28/: Check.hs  GameInventory.hs
RWH/chapter-3/: bookstore.hs  exercises.hs  lend.hs  list.hs  nestedlets.hs  (+2 more)
RWH/chapter-5/: Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  chapter-5.cabal
chapter-13/: monad.hs  reader-monad.hs  state-monad.hs
chapter-14/: zipper.hs
chapter-2/: first.hs
chapter-3/: third.hs
chapter-5/: recursion.hs
chapter-6/: high-order-fn.hs
chapter-8/: type.hs
(+105 files in other folders)
