cabal-version:      2.4
name:               hangmanrm
version:            0.1.0.0
synopsis:           Playing Hangman

-- A longer description of the package.
-- description:
homepage:           RM

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rz
maintainer:         muhamaul@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md, data/dict.txt

executable hangmanrm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.7 && <5, random >=1.1, split >=0.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
