cabal-version:      2.4
name:               url-shortener
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           URL shortener

-- A longer description of the package.
description:        Please see README

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rz
maintainer:         muhamaul@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

executable url-shortener
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, bytestring, hedis, mtl, network-uri,
                      random, scotty, semigroups, text, transformers
    hs-source-dirs:   app
    default-language: Haskell2010
