-- learnparsers.cabal

name:           parserfrac
version:        0.1.0.0
-- license-file:
author:         RM
maintainer:     muhamaul@gmail.com
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  exposed-modules:      ParserFrac
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >=4.7 && < 5, trifecta
  hs-source-dirs:       .
  default-language:     Haskell2010 
