cabal-version:      2.4
name:               call-em-up
version:            0.1.0.0
synopsis:           Call the sayHello function

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             RM
maintainer:         muhamaul@gmail.com

-- A copyright notice.
-- copyright:
category:           User-interface
extra-source-files: CHANGELOG.md

executable call-em-up
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, hello ^>=0.1.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
